--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     line-height: 40px;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 14px;
-    color: #5b6987;
+    font-size: 13px;
+    color: #5b6987e3;
     text-decoration: none;
 }
 
@@ -25,7 +25,7 @@
 }
 
 #nav-top .pull-left p i {
-    font-size: 12px;
+    font-size: 10px;
     margin-left: 2px;
 }
 
@@ -44,12 +44,107 @@
 }
 
 #nav-top .pull-right a {
-    padding: 0 20px;
+    padding-left: 20px;
 }
 /* ----- Fine nav-top ----- */
+
+/* ----- Inizio navbar ----- */
+.navbar-default {
+    background-color: white;
+}
+
+.navbar-brand {
+    height: 65px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    margin-right: 30px;
+}
+
+.navbar-brand img {
+    height: 29px;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: rgb(3, 27, 79);
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    padding: 20px 12px;
+    height: 65px;
+    text-align: bottom;
+    line-height: 25px;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    color: #006aff;
+}
+
+.navbar-default .navbar-nav .dropdown i {
+    color: #5b698785;
+}
+
+.navbar-default .navbar-nav .btn {
+    height: 37px;
+    margin-top: 14px;
+    margin-bottom: 14px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
+    font-size: 14px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.navbar-default .navbar-nav .btn:first-child {
+    margin-right: 10px;
+    border-color: #006aff;
+    color: #006aff;
+    transition: all 0.3s linear;
+}
+
+.navbar-default .navbar-nav .btn:first-child:hover {
+    background-color: #006aff;
+    color: white;
+}
+
+.navbar-default .navbar-nav .btn:last-child {
+    background-color: #006aff;
+    color: white;
+    border-color: #006aff;
+}
+
+.navbar-toggle {
+    display: block;
+    border: 0;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.navbar-default .navbar-toggle:hover {
+    background-color: transparent;
+}
+
+.navbar-collapse.collapse {
+    display: none!important;
+}
+
+.navbar-header {
+    float: none;
+}
 
 @media screen and (min-width: 1024px) {
     #nav-top {
         display: block;
+    }
+
+    .navbar-toggle {
+        display: none;
+    }
+
+    .navbar-collapse.collapse {
+        display: block!important;
+    }
+
+    .navbar-header {
+        float: left;
     }
 }
