--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ section .intro p {
 /* ----- Fine sezione features ----- */
 
 /* ----- Inizio sezione developers ----- */
-#developers {
+#developers, #teams {
     background-color: #f3f5f9;
 }
 
@@ -387,20 +387,20 @@ section .intro p {
     margin: auto;
 }
 
-#developers .carousel .circles {
+.carousel .circles {
     margin-top: 25px;
 }
 
-#developers .carousel .circle {
+.carousel .circle {
     display: inline-block;
-    width: 10px;
-    height: 10px;
+    width: 11px;
+    height: 11px;
     border-radius: 50%;
     border: 2px solid #0069ff;
     margin: 5px;
 }
 
-#developers .carousel .circle:hover {
+.carousel .circle:hover {
     background-color: #0069ff;
 }
 /* ----- Fine sezione developers ----- */
@@ -506,8 +506,67 @@ section .intro p {
 }
 /* ----- Fine sezione data ----- */
 
+/* ----- Inizio sezione teams ----- */
+#teams .intro p a {
+    color: #0069ff;
+    text-decoration: none;
+    font-weight: 400;
+}
+
+#teams .intro p a:hover {
+    color: #1633ff;
+}
+
+#teams .carousel .box {
+    background-color: white;
+    padding: 64px;
+    margin: 80px 0;
+    border-radius: 8px;
+    box-shadow: 0px 5px 3px -1px rgba(0,0,0,0.05);
+}
+
+#teams .carousel .box .logo img {
+    max-width: 100%;
+}
+
+#teams .carousel .box .quotation {
+    color: #5b6987;
+    font-size: 24px;
+    font-weight: 300;
+    margin: 30px 0;
+}
+
+#teams .carousel .box .quotation img {
+    width: 21px;
+    height: 17px;
+}
+
+#teams .carousel .box .name,
+#teams .carousel .box .role {
+    color: #5b6987;
+}
+
+#teams .carousel .box .name {
+    font-weight: 400;
+    font-size: 18px;
+}
+
+#teams .carousel .box .role {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+/* ----- Fine sezione teams ----- */
+
+
 
 /* ----- Inizio media queries ----- */
+@media screen and (min-width: 390px) {
+    #teams .carousel .box .logo img {
+        max-width: 200px;
+    }
+}
+
 @media screen and (min-width: 468px) {
     #data #table {
         max-width: 455px;
