--- a/style.css
+++ b/style.css
@@ -555,15 +555,51 @@ section .intro p {
     font-size: 14px;
     font-weight: 300;
 }
-
 /* ----- Fine sezione teams ----- */
 
+/* ----- Inizio sezione cta ----- */
+#cta {
+    padding: 64px 0;
+    background-color: #0069ff;
+    background-image: url(https://prismic-io.s3.amazonaws.com/www-static/b4ba92a9-0956-484b-9a3f-68ef4d550fd4_bg-home-cta.svg);
+}
 
+#cta .left,
+#cta .right {
+    height: 84px;
+    padding: 12px 0;
+}
+
+#cta h2 {
+    font-size: 40px;
+    margin: 0;
+    color: white;
+    line-height: 30px;
+}
+
+#cta .btn {
+    height: 60px;
+    padding: 0 40px;
+    font-weight: 700;
+    font-size: 18px;
+    color: #006aff;
+    transition: all 0.1s linear;
+}
+
+#cta .btn:hover {
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
+/* ----- Fine sezione cta ----- */
 
 /* ----- Inizio media queries ----- */
 @media screen and (min-width: 390px) {
     #teams .carousel .box .logo img {
         max-width: 200px;
+    }
+
+    #cta h2 {
+        line-height: 60px;
     }
 }
 
@@ -618,6 +654,14 @@ section .intro p {
 
     #data #table hr.last {
         display: none;
+    }
+
+    #cta .left {
+        text-align: left;
+    }
+
+    #cta .right {
+        text-align: right;
     }
 }
 
