--- a/style.css
+++ b/style.css
@@ -73,8 +73,7 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-toggle {
     border: 0;
     display: block;
-    margin-bottom: 16px;
-    margin-top: 16px;
+    margin: 16px 5px 16px 0;
 }
 
 .navbar-default .navbar-toggle:hover {
@@ -83,7 +82,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar-brand {
     height: 65px;
-    margin-right: 30px;
     padding-top: 18px;
     padding-bottom: 18px;
 }
@@ -231,15 +229,11 @@ h1, h2, h3, h4, h5, h6 {
     border-color: #006aff;
     color: #006aff;
     padding: 11px 0;
+    width: 100%;
 }
 
 .jumbotron .sign-up-box .footer .btn:first-child {
-    margin-right: 5px;
-    width: 80%;
-}
-
-.jumbotron .sign-up-box .footer .btn:last-child {
-    width: calc(20% - 5px);
+    margin-bottom: 10px;
 }
 
 .jumbotron .sign-up-box .footer .btn:hover {
@@ -663,18 +657,40 @@ footer .bottom-left .copyright p {
 
 footer .bottom-right {
     font-size: 20px;
-    height: 50px;
-    line-height: 50px;
     text-align: center;
 }
 
 footer .bottom-right a {
     display: inline-block;
+    height: 50px;
+    line-height: 50px;
     margin-right: 10px;
+}
+
+footer .bottom-right a img {
+    filter: contrast(0);
+    height: 20px;
+    margin-bottom: 5px;
+}
+
+footer .bottom-right a:hover img {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(52deg) brightness(150%) contrast(101%) opacity(100%);
 }
 /* ----- Fine footer ----- */
 
 /* ----- Inizio media queries ----- */
+@media screen and (min-width: 320px) {
+    .jumbotron .sign-up-box .footer .btn:first-child {
+        margin-bottom: 0;
+        margin-right: 5px;
+        width: 80%;
+    }
+
+    .jumbotron .sign-up-box .footer .btn:last-child {
+        width: calc(20% - 5px);
+    }
+}
+
 @media screen and (min-width: 390px) {
     #teams .carousel .box .logo img {
         max-width: 200px;
@@ -693,6 +709,10 @@ footer .bottom-right a {
 }
 
 @media screen and (min-width: 768px) {
+    .navbar-toggle {
+        margin-right: 0;
+    }
+
     #features .feature,
     #features ul {
         text-align: left;
@@ -853,6 +873,10 @@ footer .bottom-right a {
 
     .navbar-toggle {
         display: none;
+    }
+
+    .navbar-brand {
+        margin-right: 30px;
     }
 
     .navbar-collapse.collapse {
