--- a/style.css
+++ b/style.css
@@ -431,8 +431,7 @@ section .intro p {
 #data {
     background-color: rgb(3, 27, 78);
     background-image: url("https://prismic-io.s3.amazonaws.com/www-static/bb563ec9-49ef-4ceb-8468-da84f1509fcc_bg-map-solid.svg");
-    background-position-x: 50%;
-    background-position-y: 50%;
+    background-position: center;
     background-size: cover;
 }
 
@@ -558,6 +557,8 @@ section .intro p {
 #cta {
     background-color: #0069ff;
     background-image: url(https://prismic-io.s3.amazonaws.com/www-static/b4ba92a9-0956-484b-9a3f-68ef4d550fd4_bg-home-cta.svg);
+    background-position: center;
+    background-size: cover;
     padding: 64px 0;
 }
 
